// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image renders 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  object-fit: contain;
  box-sizing: border-box;
  display: block;
  width: auto;
  max-width: auto;
  height: auto;
  max-height: auto;
}

<div>
  <img
    className="c0"
    src="image.png"
  />
</div>
`;

exports[`Image renders with custom margin 1`] = `
.c0 {
  margin: xl;
  padding: 0;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  object-fit: contain;
  box-sizing: border-box;
  display: block;
  width: auto;
  max-width: auto;
  height: auto;
  max-height: auto;
}

<div>
  <img
    className="c0"
    src="image.png"
  />
</div>
`;

exports[`Image renders with fixed height 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  object-fit: contain;
  box-sizing: border-box;
  display: block;
  width: auto;
  max-width: auto;
  height: 100px;
  max-height: 100px;
}

<div>
  <img
    className="c0"
    src="image.png"
  />
</div>
`;

exports[`Image renders with fixed width 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  object-fit: contain;
  box-sizing: border-box;
  display: block;
  width: 100px;
  max-width: 100px;
  height: auto;
  max-height: auto;
}

<div>
  <img
    className="c0"
    src="image.png"
  />
</div>
`;
